Renamed namespace to WhoamiService

--- a/whoami-service/Properties/launchSettings.json
+++ b/whoami-service/Properties/launchSettings.json
@@ -17,7 +17,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "whoami_service": {
+    "WhoamiService": {
       "commandName": "Project",
       "launchBrowser": true,
       "launchUrl": "api/values",
