Added k8s configs for ng-client

--- a/reverse-proxy/nginx.conf
+++ b/reverse-proxy/nginx.conf
@@ -32,5 +32,9 @@ http {
         location /api/whoami/ {
             proxy_pass http://whoami-svc:5000/;
         }
+
+        location / {
+            proxy_pass http://ng-client-svc:3000/;
+        }
     }
 }
