--- a/auth-service/package.json
+++ b/auth-service/package.json
@@ -12,12 +12,14 @@
     },
     "dependencies": {
         "express": "^4.16.4",
-        "jsonwebtoken": "^8.5.1"
+        "jsonwebtoken": "^8.5.1",
+        "mongodb": "^3.2.6"
     },
     "devDependencies": {
         "@types/express": "^4.16.1",
         "@types/jsonwebtoken": "^8.3.2",
         "@types/node": "~10.5.1",
+        "@types/mongodb": "^3.1.28",
         "nodemon": "~1.17.5",
         "typescript": "~2.9.2"
     }
