--- a/reverse-proxy/nginx.conf
+++ b/reverse-proxy/nginx.conf
@@ -29,8 +29,16 @@ http {
 
         server_name auth-one.intra;
 
+        #location /api/auth/ {
+        #    proxy_pass http://auth-svc:1221/;
+        #    proxy_set_header X-Real-IP         $remote_addr;
+        #    proxy_set_header X-Forwarded-For   $proxy_add_x_forwarded_for;
+        #}
+
         location /api/whoami/ {
             proxy_pass http://whoami-svc:5000/;
+            proxy_set_header X-Real-IP         $remote_addr;
+            proxy_set_header X-Forwarded-For   $proxy_add_x_forwarded_for;
         }
 
         location / {
