--- a/mongo/k8s-deployment.yaml
+++ b/mongo/k8s-deployment.yaml
@@ -1,7 +1,7 @@
-apiVersion: apps/v1beta2
+apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: mongo-deploy
+  name: mongo-dep
   labels:
     component: mongo
     app: auth-one
