home-ui Dockerfile fixes

--- a/home-ui/Dockerfile
+++ b/home-ui/Dockerfile
@@ -1,13 +1,13 @@
 # node is used to build the angular application
-FROM node:10.16.0
+FROM node:10.16.0 AS build
 
 WORKDIR /app
 COPY . .
 
-RUN npm ci --only=production
+RUN npm ci
 RUN npm run build
 
 # We use nginx to serve the application
-FROM nginx:1.15.2 AS runtime
+FROM nginx:1.16.0 AS runtime
 WORKDIR /app
 COPY --from=build /app/dist/home-ui /usr/share/nginx/html
