--- a/reverse-proxy/nginx.conf
+++ b/reverse-proxy/nginx.conf
@@ -42,7 +42,7 @@ http {
         }
 
         location / {
-            proxy_pass http://ng-client-svc:3000/;
+            proxy_pass http://home-ui-svc:3200/;
         }
     }
 }
